# FaaliyetReporter

./: CMakeLists.txt  FaaliyetReporter.pro  FaaliyetReporter.pro.user.37ad6da  birimlistform.cpp  birimlistform.h  birimlistform.ui  configuration.h  extrainformationdialog.cpp  extrainformationdialog.h  extrainformationdialog.ui  faaliyetresource.qrc  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  mongoheaders.h  resource.qrc
